# xtb_client

./: Cargo.toml
src/: builder.rs  client.rs  config.rs  lib.rs
src/api/: account.rs  api_error.rs  command.rs  mod.rs  response.rs
src/api/auth/: login.rs  mod.rs
src/connection/: command.rs  connection.rs  mod.rs  socket.rs
