[package]
name = "xtb_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "^1.0.180", features = ["derive"] }
serde_json = "^1.0.104"
thiserror = "^1.0.44"
tokio-websockets = { version = "^0.3.3", features = ["client", "tokio-rustls", "http"] }
