[package]
name = "xtb_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "^0.1.72"
futures-util = "^0.3.28"
serde = { version = "^1.0.180", features = ["derive"] }
serde_json = "^1.0.104"
thiserror = "^1.0.44"
tokio = "^1.29.1"
tokio-tungstenite = { version = "^0.20.0", features = ["rustls"] }
url = "^2.4.0"
